Meta data, favicon added, Unnecessary logging removed, dataService renamed to products.service.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="E-shop website, Visma Internship" />
+    <meta
+      name="keywords"
+      content="HTML, CSS, JavaScript, Visma, Internship, shop, e-shop"
+    />
+    <meta name="author" content="Dautartas Valvonis" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <link rel="stylesheet" href="stylesheets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -10,6 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <title>E-shop</title>
     <script type="module" src="script.js" async></script>
   </head>
@@ -89,7 +96,7 @@
         </div>
       </div>
       <footer class="footer">
-        <span>&copy 2022 Copyright: Dautartas Valvonis</span>
+        <span>&copy; 2022 Copyright: Dautartas Valvonis</span>
       </footer>
     </div>
   </body>
