Products on sale are now using pseudoclass, Old prices added when product is on sale, Images of products are no longer as placeholders, Transitions added for products. Navigation icons added.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,22 @@
       <header class="header">
         <nav class="navigation">
           <div class="navigation__links">
-            <a class="navigation__link" id="shop">Shop</a>
-            <a class="navigation__link" id="cart">Cart</a>
+            <a class="navigation__link" id="shop">
+              Shop
+
+              <img
+                src="assets/48_Shopping Cart.svg"
+                class="navigation__link-icon--cart"
+                alt="Shopping Cart"
+              />
+            </a>
+            <a class="navigation__link" id="cart">
+              Cart
+              <img
+                src="assets/48_Shopping Cart.svg"
+                class="navigation__link-icon--cart"
+                alt="Shopping Cart"
+            /></a>
           </div>
         </nav>
       </header>
