Fixed new-item button added

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
               </select>
             </div>
             <div class="shop__grid"></div>
+            <button class="shop__icon" id="newItemButton"></button>
           </section>
         </main>
         <div class="sidebar">
