Navigation to cart page added

--- a/cart.html
+++ b/cart.html
@@ -49,20 +49,8 @@
         <main class="main">
           <section class="shop">
             <div class="shop__heading">
-              <h1 class="shop__heading-title">Shop</h1>
+              <h1 class="shop__heading-title">Cart</h1>
               <span class="shop__heading-breadcrumbs">HOME/SHOP</span>
-            </div>
-            <div class="shop__filter">
-              <span class="shop__filter-text"
-                >Showing <span id="filter__range">Loading...</span> of
-                <span id="filter__count">Loading...</span> results</span
-              >
-              <select name="sort" id="sort" class="shop__filter-sort">
-                <option value="default" selected="selected">
-                  Default sorting
-                </option>
-                <option value="other">Other sorting</option>
-              </select>
             </div>
             <div class="shop__grid"></div>
             <button class="shop__icon" id="newItemButton"></button>
@@ -118,7 +106,3 @@
     </div>
   </body>
 </html>
-
-<!-- TODO: 
-  *scroll to top button
--->
