Fetching data from server, non-functional add form added

--- a/cart.html
+++ b/cart.html
@@ -26,7 +26,7 @@
       <header class="header">
         <nav class="navigation">
           <div class="navigation__links">
-            <a href="index.html" class="navigation__link" id="shop">
+            <a href="/" class="navigation__link" id="shop">
               Shop
 
               <img
@@ -53,7 +53,6 @@
               <span class="shop__heading-breadcrumbs">HOME/SHOP</span>
             </div>
             <div class="shop__grid"></div>
-            <button class="shop__icon" id="newItemButton"></button>
           </section>
         </main>
         <div class="sidebar">
