--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <header class="header">
         <nav class="navigation">
           <div class="navigation__links">
-            <a href="index.html" class="navigation__link" id="shop">
+            <a href="/" class="navigation__link" id="shop">
               Shop
 
               <img
