--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
               </select>
             </div>
             <div class="shop__grid"></div>
-            <button class="shop__icon" id="newItemButton"></button>
+            <button
+              type="button"
+              class="shop__icon"
+              id="newItemButton"
+            ></button>
           </section>
         </main>
         <div class="sidebar">
