Loader animation added, Utils file created.

--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
             </div>
             <div class="shop__filter">
               <span class="shop__filter-text"
-                >Showing <span id="filter__range">Loading...</span> of
-                <span id="filter__count">Loading...</span> results</span
+                >Showing <span id="filter__range"></span> of
+                <span id="filter__count"></span>
+                results</span
               >
+
               <select name="sort" id="sort" class="shop__filter-sort">
                 <option value="default" selected="selected">
                   Default sorting
