Filter moved to components folder.

--- a/index.html
+++ b/index.html
@@ -52,20 +52,7 @@
               <h1 class="shop__heading-title">Shop</h1>
               <span class="shop__heading-breadcrumbs">HOME/SHOP</span>
             </div>
-            <div class="shop__filter">
-              <span class="shop__filter-text"
-                >Showing <span id="filter__range"></span> of
-                <span id="filter__count"></span>
-                results</span
-              >
-
-              <select name="sort" id="sort" class="shop__filter-sort">
-                <option value="default" selected="selected">
-                  Default sorting
-                </option>
-                <option value="other">Other sorting</option>
-              </select>
-            </div>
+            <div class="filter"></div>
             <div class="shop__grid"></div>
             <button
               type="button"
